# project2025s-py

./: .gitignore  CLAUDE.md  README.md  _quarto.yml  index-REGION.tex  index.html  index.qmd  index.tex  jupytext.toml  project2025s.Rproj  pyproject.toml  references.bib  replicate_india_sdm_convergence.py  requirements.txt
.claude/: author-config.yml
data/: W_matrix.csv  W_matrix.dta  india520.dta
docs/: cover-letter.md  region-troubleshooting.md
images/: luminosity_map.graffle  luminosity_map2.graffle
legacy/: Wqueen.dta
log/: 20260204_1430.md  20260204_2120_region_integration.md  20260204_2215.md  20260205_1210_documentation_update.md  20260205_1245_fix_region_template.md  20260212_1500_notebook_workflow_and_cache_fix.md  20260212_1830_replace_spatial_dependence_with_lisa.md  20260212_2100_spillover_modeling_notebook.md  20260213_0920_session_updates.md  20260213_1058_academic_compliance.md  20260213_1444_full_build_and_fixes.md  20260213_1600_stale_cache_prevention.md  20260213_1640_fix_notebook_preview_display.md  20260213_2000_notebook_updates_and_rebuild.md  20260222_1800_uv_jupytext_myst_readme.md  20260301_2130_proofreading_and_full_rebuild.md  20260302_0950_simplify_infrastructure_and_fix_embeds.md  20260303_1500_bibliography_fixes_and_skills.md  20260304_1200_readme_notebook_fixes.md  20260304_1400_cover_letter.md  20260304_blind_review_author_info.md  20260407_1829_spatial_culture_notebook.md  20260407_2150_culture_economy_analysis.md  20260407_2200_session_culture_economy.md  20260409_0750_c06_audit_report.md  20260410_1534.md  20260620_1610.md  (+7 more)
(+57 files in other folders)
