[project]
name = "project2025s"
version = "0.1.0"
description = "Spatial convergence analysis of nighttime lights in India (1996-2010)"
requires-python = ">=3.10"
authors = [
    { name = "Carlos Mendez", email = "carlosmendez777@gmail.com" },
    { name = "Sujana Kabiraj" },
    { name = "Jiaqi Li" },
]
dependencies = [
    # Core packages
    "numpy>=1.26.4",
    "pandas>=2.2.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.2",
    "scikit-learn>=1.4.0",
    "jupyter>=1.0.0",
    "statsmodels>=0.14.6",
    "tabulate>=0.9.0",
    "stargazer>=0.0.7",
    # Geospatial packages
    "geopandas>=1.1.2",
    "libpysal>=4.9.2",
    "esda>=2.5.1",
    "splot>=1.1.5",
    "mgwr>=2.2.1",
    "rasterio>=1.3.9",
    "contextily>=1.5.0",
    "mapclassify>=2.6.1",
    "folium>=0.20.0",
    "pyarrow>=22.0.0",
    "plotly>=6.5.2",
    "jupytext>=1.19.1",
    "spreg>=1.8.5",
]

[tool.uv]
# Override transitive deps that lack pre-built wheels for Python 3.10 arm64
override-dependencies = [
    "llvmlite>=0.44.0,<0.46",
    "numba>=0.60.0,<0.64",
]
